syntax = "proto3";

package tenncor;

import "google/protobuf/any.proto";

// data

enum tensor_t
{
	BAD = 0;
	DOUBLE = 1;
	FLOAT = 2;
	INT8 = 3;
	INT16 = 4;
	INT32 = 5;
	INT64 = 6;
	UINT8 = 7;
	UINT16 = 8;
	UINT32 = 9;
	UINT64 = 10;
	// sentinel
	_TYPE_SENTINEL = 11;
}

enum opcode_t
{
	ABS = 0;
	NEG = 1;
	NOT = 2;
	SIN = 3;
	COS = 4;
	TAN = 5;
	EXP = 6;
	LOG = 7;
	SQRT = 8;
	ROUND = 9;
	POW = 10;
	ADD = 11;
	SUB = 12;
	MUL = 13;
	DIV = 14;
	EQ = 15;
	NE = 16;
	GT = 17;
	LT = 18;
	BINO = 19;
	UNIF = 20;
	NORM = 21;
	TRANSPOSE = 22;
	FLIP = 23;
	ARGMAX = 24;
	RMAX = 25;
	RSUM = 26;
	EXPAND = 27;
	N_ELEMS = 28;
	N_DIMS = 29;
	MATMUL = 30;
	// gradient nodes (todo: remove this)
	INJACOBIAN = 31;
	OUTJACOBIAN = 32;
	JACOBIANLEFT = 33;
	JACOBIANRIGHT = 34;
	// sentinel
	_OP_SENTINEL = 35;
}

message shape_proto
{
	repeated uint64 shape = 1;
}

message tensor_proto
{
	bytes data = 1;
	tensor_t type = 2;
	repeated uint64 allowed_shape = 3;
	repeated uint64 alloced_shape = 4;
}

// structure

message node_proto
{
	enum node_t
	{
		VARIABLE = 0;
		PLACEHOLDER = 1;
		CONSTANT = 2;
		FUNCTOR = 3;
	}
	node_t type = 1;
	string label = 2;
	google.protobuf.Any detail = 3;
}

message functor_proto
{
	uint32 opcode = 1;
	repeated string args = 2;
}

message source_proto
{
	enum source_t
	{
		CONSTANT = 0;
		UNIFORM = 1;
		NORMAL = 2;
	}
	source_t src = 1;
	tensor_t dtype = 2;
	repeated bytes settings = 3;
}

message variable_proto
{
	shape_proto shape = 1;
	source_proto source = 2;
}

message graph_proto
{
	map<string, node_proto> node_map = 1;
	repeated string create_order = 2;
}
